PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Aug 2006, PHP 5.2.0RC2
- Added version specific registry keys to allow different configurations for
  different php version. (Richard, Dmitry)
- In addition to path to php.ini, PHPRC now may specify full file name. (Dmitry)
- Added "PHPINIDir" Apache directive to apache and apache_hooks SAPIs. (Dmitry)
- Added an optional boolean parameter to memory_get_usage() and 
  memory_get_peak_usage() to get memory size allocated by emalloc() or real
  size of memory allocated from system. (Dmitry)
- Implemented #38357 (dbase_open can't open DBase 3 dbf file).
  (rodrigo at fabricadeideias dot com, Mike)

- Moved extensions to PECL:
  . ext/filepro (Derick, Tony)
  . ext/hwapi (Derick, Tony)

- Improved SNMP extension: (Jani)
  . Renamed snmp_set_oid_numeric_print() to snmp_set_oid_output_format().
  . Added 2 new constants: SNMP_OID_OUTPUT_FULL and SNMP_OID_OUTPUT_NUMERIC
  . Fixed bug #37564 (AES privacy encryption not possible due to net-snmp 5.2
    compatibility issue). (Patch: scott dot moynes+php at gmail dot com)

- Improved OpenSSL extension: (Pierre)
  . Added support for all supported algorithms in openssl_verify
  . Implement #36732 (req/x509 extensions support for openssl_csr_new and
    openssl_csr_sign) (ben at psc dot edu, Pierre)
  . Implement #28382 (openssl_x509_parse() extensions support)

- Fixed XSLTProcessor::importStylesheet() to return TRUE on success (Christian)
- Fixed leaks in openssl_csr_sign and openssl_csr_new (Pierre)
- Fixed phpinfo() cutoff of variables at \0. (Ilia)
- Fixed a bug in the filter extension that prevented magic_quotes_gpc from
  being applied when RAW filter is used. (Ilia)
- Fixed bug #38394 (PDO fails to recover from failed prepared statement
  execution). (Ilia)
- Fixed bug #38377 (session_destroy() gives warning after
  session_regenerate_id()). (Ilia)